Fixed some alignment issues for mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -29,7 +29,8 @@
 h1 {
   font-size: 4rem;
   color: #e9c46a;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
+  text-align: center;
 }
 
 h2 {
